--- a/style.css
+++ b/style.css
@@ -245,6 +245,12 @@ input {
     display: none;
 }
 
+.delete-item {
+    background-image: url(/imgs/plas.png);
+    height: 40px;
+    width: 60px;
+}
+
 @keyframes calculationAnimation {
     0% {
         transform: rotate(0deg);
